--- a/src/app/detected-recyclable-can/detected-recyclable-can.component.html
+++ b/src/app/detected-recyclable-can/detected-recyclable-can.component.html
@@ -5,10 +5,10 @@
     <div class="photo-container">
         <img src="../../assets/images/diet-soda.jpg">
     </div>
-    <div class="buttons">Popcan <button>Drop-Off</button><button>Recycle</button></div>
+    <div class="buttons">Popcan <div class="tabs" id="dropoff" style="background-color: #0F0C4C;">Drop Off</div><div class="tabs" style="background-color: #46D07D;">Recycle</div></div>
     <div class="protip">
-        <h3>POPCAN PRO-TIP</h3>
-        <p>You can put this in the recycle bin! Make sure you rinse it clean and dry it before tossing it in the can. Aluminum is a highly valuable material and can be reused multiple times.</p>
+        <h3>POP TIP</h3>
+        <p>Recycle this at the curb or take to a recycling center. Aluminum is a highly valuable materials and can be reused repeatedly.</p>
     </div>
     <div class="recycle-site"></div>
 </div>
