--- a/src/app/detected-recyclable-yogurt/detected-recyclable-yogurt.component.html
+++ b/src/app/detected-recyclable-yogurt/detected-recyclable-yogurt.component.html
@@ -6,10 +6,11 @@
     <div class="photo-container">
         <img src="../../assets/images/ecaf0dac939d53b6e004d7184106363d.jpg">
     </div>
-    <div class="buttons">Yogurt Container <button>Reuse</button></div>
+    <div class="buttons">Yogurt Container <button>Drop Off</button></div>
     <div class="protip">
-        <h3>YOGURT CONTAINER PRO-TIP</h3>
-        <p>You can put this in the recycle bin! Make sure you rinse it clean and dry it before tossing it in the can. Aluminum is a highly valuable material and can be reused multiple times.</p>
+        <h3>POP TIP</h3>
+        <p>Protohaven upcycles containers to make plastic for 3D printing.</p>
+        <p>You can help by making sure the plastic is clean and dry!</p>
     </div>
     <div class="recycle-site"></div>
 </div>
