--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -4,7 +4,7 @@
     <div class="enter-zip-code">
       <h1>What can you recycle?</h1>
       <h2><img src="assets/images/location_on-24px.svg">Detect My Location</h2>
-      <textarea placeholder="Enter Your Zipcode" (keydown)="triggerFunction($event)"></textarea>
+      <textarea placeholder="Enter Your ZIP Code&#8482;" (keydown)="triggerFunction($event)"></textarea>
       <div id="location">{{ locationText }}</div>
       <button color="secondary" [routerLink]="['/tempmenu']">Scan An Item</button>
     </div>
