--- a/src/app/temp-menu/temp-menu.component.scss
+++ b/src/app/temp-menu/temp-menu.component.scss
@@ -1,9 +1,10 @@
 
 .container {
-    background-color: #E5E5E5; 
+    background-color: #0F0C4C;
+    color: #FFFFFF;
     min-height: 580px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 100 0;
     ol {
         text-align: left;
